# veracode_bulk_mitigator

./: .gitignore  Pipfile  README.md  bulk_mitigator.py  pyproject.toml  requirements.txt  sast_baseline.json
data/: application_names.txt  approved_bulk_mitigations.json
scripts/: scan.sh  test.sh  update.sh
utils/: api.py  bulk_mitigate.py  bulk_mitigations_file.py  list_of_applications.py  processor.py
